[FIX] round-gradient overflowed horizontally

--- a/the-obsidian-table-frontend/src/assets/base.css
+++ b/the-obsidian-table-frontend/src/assets/base.css
@@ -18,6 +18,10 @@
   font-style: normal;
 }
 
+html {
+    overflow-x: hidden;
+}
+
 html, body {
     background-color: var(--BGBackground);
     color: var(--WhiteAshes);
